odoo-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoonamespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: odoonamespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: "odoo:18"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: odoo-config-volume
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: odoo-config-volume
        configMap:
          name: odoo-confmap
