postgres-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoonamespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: odoonamespace
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
