odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoonamespace
spec:
  selector:
    app: odoo
  ports:
    - protocol: TCP
      port: 8069  
      targetPort: 8069
  type: NodePort
