postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: odoonamespace
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
